@@ -19,13 +19,13 @@
 
 package org.apache.druid.catalog.model;
 
-import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
 import org.apache.druid.catalog.model.table.DatasourceDefn;
 import org.apache.druid.catalog.model.table.ExternalTableDefn;
+import org.apache.druid.catalog.model.table.IndexingTemplateDefn;
 import org.apache.druid.server.security.ResourceType;
 
-import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -96,7 +96,7 @@ public class SchemaRegistryImpl implements SchemaRegistry
     register(new SchemaDefnImpl(
         TableId.DRUID_SCHEMA,
         ResourceType.DATASOURCE,
-        ImmutableSet.of(DatasourceDefn.TABLE_TYPE)
+        Set.of(DatasourceDefn.TABLE_TYPE)
     ));
     register(new SchemaDefnImpl(
         TableId.LOOKUP_SCHEMA,
@@ -116,12 +116,17 @@ public class SchemaRegistryImpl implements SchemaRegistry
     register(new SchemaDefnImpl(
         TableId.EXTERNAL_SCHEMA,
         EXTERNAL_RESOURCE,
-        ImmutableSet.of(ExternalTableDefn.TABLE_TYPE)
+        Set.of(ExternalTableDefn.TABLE_TYPE)
     ));
     register(new SchemaDefnImpl(
         TableId.VIEW_SCHEMA,
         ResourceType.VIEW,
         null // TODO
+    ));
+    register(new SchemaDefnImpl(
+        TableId.INDEXING_TEMPLATE_SCHEMA,
+        ResourceType.CONFIG,
+        Set.of(IndexingTemplateDefn.TYPE)
     ));
   }
 
@@ -148,7 +153,7 @@ public class SchemaRegistryImpl implements SchemaRegistry
     // No real need to sort every time. However, this is used infrequently,
     // so OK for now.
     List<SchemaSpec> schemas = Lists.newArrayList(builtIns.values());
-    Collections.sort(schemas, (s1, s2) -> s1.name().compareTo(s2.name()));
+    schemas.sort(Comparator.comparing(SchemaSpec::name));
     return schemas;
   }
 }
